[package]
name = "snarkos-derives"
version = "1.1.4"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Canonical serialization for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["aleo", "cryptography", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography::cryptocurrencies", "operating-systems"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
snarkos-metrics = { path = "../metrics", version = "1.1.4" }

proc-macro-crate = { version = "0.1" }
proc-macro-error = { version = "1", default-features = false }
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
