[package]
name = "snarkos-display"
version = "2.2.7"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A display for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoNet/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "operating-systems" ]
license = "Apache-2.0"
edition = "2021"

[dependencies.anyhow]
version = "1.0.79"

[dependencies.crossterm]
version = "0.27"

[dependencies.ratatui]
version = "0.25"

[dependencies.snarkos-node]
path = "../node"
version = "=2.2.7"

[dependencies.snarkvm]
workspace = true

[dependencies.tokio]
version = "1.28"
features = [ "rt" ]
