[package]
name = "snarkos-display"
version = "3.0.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A display for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoNet/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "cryptography::cryptocurrencies", "os" ]
license = "Apache-2.0"
edition = "2021"

[dependencies.anyhow]
version = "1.0.79"

[dependencies.crossterm]
version = "0.27"

[dependencies.ratatui]
version = "0.25"

[dependencies.snarkos-node]
path = "../node"
version = "=3.0.0"

[dependencies.snarkvm]
workspace = true

[dependencies.tokio]
version = "1.28"
features = [ "rt" ]
