[package]
name = "snarkos-dpc"
version = "1.1.0"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Errors for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["aleo", "cryptography", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography::cryptocurrencies", "operating-systems"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
snarkos-algorithms = { path = "../algorithms", version = "1.0.0", default-features = false }
snarkos-curves = { path = "../curves", version = "1.0.0", default-features = false }
snarkos-errors = { path = "../errors", version = "1.0.0", default-features = false }
snarkos-gadgets = { path = "../gadgets", version = "1.0.0", default-features = false }
snarkos-models = { path = "../models", version = "1.0.0", default-features = false }
snarkos-objects = { path = "../objects", version = "1.0.0", default-features = false }
snarkos-parameters = { path = "../parameters", version = "1.0.0", default-features = false }
snarkos-profiler = { path = "../profiler", version = "1.0.0" }
snarkos-utilities = { path = "../utilities", version = "1.0.0", default-features = false }

blake2 = { version = "0.8.1" }
derivative = { version = "2" }
hex = { version = "0.4.2" }
itertools = { version = "0.9.0" }
rand = { version = "0.7" }

[dev-dependencies]
snarkos-testing = { path = "../testing" }

criterion = { version = "0.3.3" }
rand_xorshift = { version = "0.2" }

[features]
default = [
    "snarkos-algorithms/default",
    "snarkos-curves/default",
    "snarkos-errors/default",
    "snarkos-gadgets/default",
    "snarkos-models/default",
    "snarkos-parameters/default",
    "snarkos-utilities/default",
]
print-trace = [ "snarkos-profiler/print-trace" ]
