[package]
name = "snarkos-dpc-consensus"
version = "0.8.0"
authors = ["Michael Beller", "Collin Chin", "Raymond Chu", "Matthew Green", "Ian Miers", "Howard Wu"]
description = "Consensus for a decentralized record system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["cryptography", "blockchain", "decentralized", "record", "zkSNARK"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
snarkos-algorithms = { path = "../algorithms" }
snarkos-errors = { path = "../errors" }
snarkos-objects = { path= "../objects" }
snarkos-dpc = { path= "../dpc" }
snarkos-dpc-storage = { path = "../dpc_storage" }
snarkos-models = { path = "../models" }
snarkos-utilities = { path = "../utilities" }

bincode = { version="1.2.0" }
chrono = { version = "0.4", features = ["serde"] }
hex = { version = "0.4.2" }
log = { version = "0.4.8" }
rand = { version = "0.7.3" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
wagyu-bitcoin = { version = "0.6.1" }
wagyu-model = { version = "0.6.1" }

[dev-dependencies]
futures-await-test = { version = "0.3.0" }
