[package]
name = "snarkos-dpc-consensus"
version = "0.8.0"
authors = ["The Aleo Team <hello@aleo.org"]
description = "Consensus for a decentralized record system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["cryptography", "blockchain", "decentralized", "record", "zkSNARK"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
snarkos-algorithms = { path = "../algorithms", version = "0.8.0", default-features = false }
snarkos-errors = { path = "../errors", version = "0.8.0", default-features = false }
snarkos-objects = { path= "../objects", version = "0.8.0", default-features = false }
snarkos-dpc = { path= "../dpc", version = "0.8.0", default-features = false }
snarkos-models = { path = "../models", version = "0.8.0", default-features = false }
snarkos-storage = { path = "../storage", version = "0.8.0", default-features = false }
snarkos-utilities = { path = "../utilities", version = "0.8.0", default-features = false }

bincode = { version="1.2.0" }
chrono = { version = "0.4", features = ["serde"] }
hex = { version = "0.4.2" }
log = { version = "0.4.8" }
rand = { version = "0.7.3" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }

[dev-dependencies]
futures-await-test = { version = "0.3.0" }
