[package]
name = "snarkos-dpc-network"
version = "0.8.0"
authors = ["Michael Beller", "Collin Chin", "Raymond Chu", "Matthew Green", "Ian Miers", "Howard Wu"]
description = "Network for a decentralized record system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["cryptography", "blockchain", "decentralized", "record", "zkSNARK"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
snarkos-algorithms = { path = "../algorithms" }
snarkos-dpc = { path = "../dpc" }
snarkos-dpc-consensus = { path = "../dpc_consensus" }
snarkos-dpc-storage = { path = "../dpc_storage" }
snarkos-errors = { path = "../errors", version = "0.8.0", default-features = false, features = ["network"] }
snarkos-objects = { path = "../objects" }
snarkos-utilities = { path = "../utilities" }

bincode = { version = "1.2.0" }
byteorder = { version = "1" }
chrono = { version = "0.4", features = ["serde"] }
hex = { version="0.4.2" }
log = { version = "0.4.8" }
rand = { version = "0.7.3" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }

[dev-dependencies]
tokio-test = { version = "0.2.0" }
serial_test = "*"
