[package]
name = "snarkos-dpc-storage"
version = "0.8.0"
authors = ["Michael Beller", "Collin Chin", "Raymond Chu", "Matthew Green", "Ian Miers", "Howard Wu"]
description = "Storage for a decentralized record system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["cryptography", "blockchain", "decentralized", "record", "zkSNARK"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
snarkos-algorithms = { path = "../algorithms" }
snarkos-errors = { path = "../errors" }
snarkos-models = { path = "../models" }
snarkos-objects = { path = "../objects" }
snarkos-utilities = { path = "../utilities" }

bincode = { version = "1.2.0" }
hex = { version = "0.4.2" }
parking_lot = { version = "0.10.0" }
rand = { version = "0.7" }
rocksdb = { version = "0.13.0" }
serde = { version = "1.0", features = ["derive"] }
wagyu-bitcoin = { version = "0.6.1" }
wagyu-model = { version = "0.6.1" }

[dev-dependencies]
snarkos-curves = { path = "../curves" }