[package]
name = "snarkos-environment"
version = "2.0.2"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Environment for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "operating-systems" ]
license = "GPL-3.0"
edition = "2021"

[dependencies.anyhow]
version = "1"

[dependencies.bincode]
version = "1"
optional = true

[dependencies.bytes]
version = "1"
optional = true

[dependencies.num_cpus]
version = "1"

[dependencies.once_cell]
version = "1"

[dependencies.rayon]
version = "1"

[dependencies.serde]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.snarkvm]
version = "0.8.0"

[dependencies.tokio]
version = "1"
features = ["sync", "rt", "time"]

[dependencies.tokio-metrics]
version = "0.1"
optional = true

[dependencies.tokio-util]
version = "0.7"
features = [ "codec" ]
optional = true

[dependencies.tracing]
version = "0.1"

[dev-dependencies.tracing-subscriber]
version = "0.3"

[dev-dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread", "time"]

[features]
network = [ "bincode", "bytes", "tokio-util" ]
task-metrics = [ "tokio-metrics" ]
