[package]
name = "snarkos-errors"
version = "1.0.0"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Errors for a decentralized record system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["cryptography", "blockchain", "decentralized", "record", "zkSNARK"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
base58 = { version = "0.1" }
bech32 = { version = "0.6" }
bincode = { version = "1.3.1" }
curl = { version = "0.4.31", optional = true }
hex = { version = "0.4.2" }
jsonrpc-core = { version = "14.2.0" }
rocksdb = { version = "0.13.0", optional = true }
thiserror = { version = "1.0" }
toml = { version = "0.5.6" }

[dev-dependencies]
curl = { version = "0.4.31" }

[features]
default = [ "librocksdb", "remote" ]
librocksdb = [ "rocksdb" ]
remote = [ "curl" ]
