[package]
name = "snarkos-errors"
version = "1.1.4"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Errors for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["aleo", "cryptography", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography::cryptocurrencies", "operating-systems"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
base58 = { version = "0.1" }
bech32 = { version = "0.6" }
bincode = { version = "1.3.1" }
curl = { version = "0.4.34", optional = true }
hex = { version = "0.4.2" }
jsonrpc-core = { version = "14.2.0" }
rocksdb = { version = "0.15.0", optional = true }
snarkvm-errors = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "0282425", version = "0.0.1" }
thiserror = { version = "1.0" }
toml = { version = "0.5.6" }

[dev-dependencies]
curl = { version = "0.4.34" }

[features]
default = [ "librocksdb", "remote" ]
librocksdb = [ "rocksdb" ]
remote = [ "curl" ]
