[package]
name = "snarkos-gadgets"
version = "0.8.0"
authors = ["Michael Beller", "Collin Chin", "Raymond Chu", "Matthew Green", "Ian Miers", "Howard Wu"]
description = "Gadgets for a decentralized record system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["cryptography", "blockchain", "decentralized", "record", "zkSNARK"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
snarkos-algorithms = { path = "../algorithms" }
snarkos-curves = { path = "../curves" }
snarkos-errors = { path = "../errors", version = "0.8.0", default-features = false }
snarkos-models = { path = "../models", version = "0.8.0", default-features = false }
snarkos-utilities = { path = "../utilities" }

derivative = { version = "1" }
digest = { version = "0.7" }

[dev-dependencies]
blake2 = { version = "0.7" }
rand = { version = "0.7" }
rand_xorshift = { version = "0.2" }
