[package]
name = "snarkos-gadgets"
version = "0.8.0"
authors = ["The Aleo Team <hello@aleo.org"]
description = "Gadgets for a decentralized record system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["cryptography", "blockchain", "decentralized", "record", "zkSNARK"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
snarkos-algorithms = { path = "../algorithms", version = "0.8.0" }
snarkos-curves = { path = "../curves", version = "0.8.0" }
snarkos-errors = { path = "../errors", version = "0.8.0" }
snarkos-models = { path = "../models", version = "0.8.0" }
snarkos-utilities = { path = "../utilities", version = "0.8.0" }

derivative = { version = "1" }
digest = { version = "0.7" }

[dev-dependencies]
blake2 = { version = "0.7" }
rand = { version = "0.7" }
rand_xorshift = { version = "0.2" }
