[package]
name = "snarkos-gadgets"
version = "1.1.3"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Gadgets for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["aleo", "cryptography", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography::cryptocurrencies", "operating-systems"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
snarkos-algorithms = { path = "../algorithms", version = "1.0.0", default-features = false }
snarkos-curves = { path = "../curves", version = "1.0.0", default-features = false }
snarkos-errors = { path = "../errors", version = "1.0.0", default-features = false }
snarkos-models = { path = "../models", version = "1.0.0", default-features = false }
snarkos-utilities = { path = "../utilities", version = "1.0.0", default-features = false }

derivative = { version = "2" }
digest = { version = "0.8.1" }
itertools = { version = "0.9.0" }

[dev-dependencies]
blake2 = { version = "0.8.1" }
rand = { version = "0.7" }
rand_xorshift = { version = "0.2" }

[features]
default = [
    "snarkos-algorithms/default",
    "snarkos-curves/default",
    "snarkos-errors/default",
    "snarkos-models/default",
    "snarkos-utilities/default",
]
