[package]
name = "snarkos-genesis"
version = "0.8.0"
authors = ["The Aleo Team <hello@aleo.org"]
description = "Genesis block for a decentralized record system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["cryptography", "blockchain", "decentralized", "record", "zkSNARK"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
snarkos-models = { path = "../models", version = "0.8.0" }
snarkos-utilities = { path = "../utilities", version = "0.8.0" }

[dev-dependencies]
snarkos-algorithms = { path = "../algorithms", version = "0.8.0" }
snarkos-consensus = { path = "../consensus", version = "0.8.0" }
snarkos-dpc = { path = "../dpc", version = "0.8.0" }
snarkos-errors = { path = "../errors", version = "0.8.0" }
snarkos-objects = { path = "../objects", version = "0.8.0" }
snarkos-parameters = { path = "../parameters", version = "0.8.0" }
snarkos-storage = { path = "../storage", version = "0.8.0" }

chrono = { version = "0.4", features = ["serde"] }
hex = { version = "0.4.2" }
parking_lot = { version = "0.10.0" }
rand = { version = "0.7" }
