[package]
name = "snarkos-marlin"
version = "1.0.0"
authors = [
  "Alessandro Chiesa <alexch@berkeley.edu>",
  "Mary Maller <mary.maller.15@ucl.ac.uk>",
  "Yuncong Hu <huyuncongh@gmail.com>",
  "Pratyush Mishra <pratyush@berkeley.edu>",
  "Noah Vesely <noah.vesely.18@ucl.ac.uk>",
  "Nicholas Ward <npward@berkeley.edu>",
  "The Aleo Team <hello@aleo.org>",
]
description = "A library for the Marlin preprocessing zkSNARK"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["cryptography", "polynomial commitments", "zkSNARK"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
snarkos-algorithms = { path = "../algorithms" }
snarkos-errors = { path = "../errors" }
snarkos-gadgets = { path = "../gadgets" }
snarkos-models = { path = "../models" }
snarkos-polycommit = { path = "../polycommit", default-features = false }
snarkos-profiler = { path = "../profiler" }
snarkos-utilities = { path = "../utilities" }

blake2 = { version = "0.8", default-features = false }
derivative = { version = "2", features = ["use_core"] }
digest = { version = "0.8" }
rand_chacha = { version = "0.2.1", default-features = false }
rand_core = { version = "0.5" }
rayon = { version = "1", optional = true }

[dev-dependencies]
snarkos-curves = { path = "../curves" }

[features]
default = [ "std", "parallel" ]
std = [ "snarkos-polycommit/std" ]
print-trace = [ "snarkos-profiler/print-trace" ]
parallel = [ "std", "rayon" ]
