[package]
name = "snarkos-marlin"
version = "1.1.0"
authors = [
  "Alessandro Chiesa <alexch@berkeley.edu>",
  "Mary Maller <mary.maller.15@ucl.ac.uk>",
  "Yuncong Hu <huyuncongh@gmail.com>",
  "Pratyush Mishra <pratyush@berkeley.edu>",
  "Noah Vesely <noah.vesely.18@ucl.ac.uk>",
  "Nicholas Ward <npward@berkeley.edu>",
  "The Aleo Team <hello@aleo.org>",
]
description = "A library for the Marlin preprocessing zkSNARK"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["cryptography", "polynomial commitments", "zkSNARK"]
categories = ["cryptography::cryptocurrencies", "operating-systems"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
snarkos-algorithms = { path = "../algorithms", version = "1.1.0" }
snarkos-errors = { path = "../errors", version = "1.1.0" }
snarkos-gadgets = { path = "../gadgets", version = "1.1.0" }
snarkos-models = { path = "../models", version = "1.1.0" }
snarkos-polycommit = { path = "../polycommit", version = "1.1.0", default-features = false }
snarkos-profiler = { path = "../profiler", version = "1.1.0" }
snarkos-utilities = { path = "../utilities", version = "1.1.0" }

blake2 = { version = "0.8", default-features = false }
derivative = { version = "2", features = ["use_core"] }
digest = { version = "0.8" }
rand_chacha = { version = "0.2.1", default-features = false }
rand_core = { version = "0.5" }
rayon = { version = "1", optional = true }

[dev-dependencies]
snarkos-curves = { path = "../curves" }

[features]
default = [ "std", "parallel" ]
std = [ "snarkos-polycommit/std" ]
print-trace = [ "snarkos-profiler/print-trace" ]
parallel = [ "std", "rayon" ]
