[package]
name = "snarkos-metrics"
version = "2.0.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Storage for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = [
    "aleo",
    "cryptography",
    "blockchain",
    "decentralized",
    "zero-knowledge"
]
categories = [ "cryptography", "operating-systems" ]
license = "GPL-3.0"
edition = "2018"

[dependencies.metrics]
version = "0.18"

[dependencies.metrics-exporter-prometheus]
version = "0.7"

[dependencies.tokio]
version = "1"
