[package]
name = "snarkos-metrics"
version = "2.0.2"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Storage for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "operating-systems" ]
license = "GPL-3.0"
edition = "2021"


[features]
prometheus = [ "metrics-exporter-prometheus" ]
test = []

[dependencies.metrics]
version = "0.19"

[dependencies.metrics-util]
version = "0.13"

[dependencies.metrics-exporter-prometheus]
version = "0.10"
optional = true

[dependencies.tokio]
version = "1"
features = [ "rt" ]
