[package]
name = "snarkos-models"
version = "1.0.0"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Models for a decentralized record system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["cryptography", "blockchain", "decentralized", "record", "zkSNARK"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
snarkos-errors = { path = "../errors", version = "1.0.0", default-features = false }
snarkos-utilities = { path = "../utilities", version = "1.0.0", default-features = false }

bincode = { version = "1.3.1" }
derivative = { version = "2" }
itertools = { version = "0.9.0" }
rand = { version = "0.7", default-features = false }
rand_xorshift = { version = "0.2", default-features = false }
serde = { version = "1.0.115", default-features = false, features = ["derive"] }
smallvec = { version = "1.4" }

[features]
default = [ "snarkos-errors/default", "snarkos-utilities/default", ]
