[package]
name = "snarkos-models"
version = "1.1.4"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Models for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["aleo", "cryptography", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography::cryptocurrencies", "operating-systems"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
snarkos-errors = { path = "../errors", version = "1.1.4", default-features = false }
snarkos-utilities = { path = "../utilities", version = "1.1.4", default-features = false }

bincode = { version = "1.3.1" }
cfg-if = { version = "0.1.10" }
derivative = { version = "2" }
fxhash = { version = "0.2.1" }
indexmap = { version = "1.6.0" }
itertools = { version = "0.9.0" }
rand = { version = "0.7", default-features = false }
rand_xorshift = { version = "0.2", default-features = false }
serde = { version = "1.0.117", default-features = false, features = ["derive"] }
snarkvm-errors = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "0282425", version = "0.0.1" }
snarkvm-models = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "0282425", version = "0.0.1" }

[features]
default = [ "snarkos-errors/default", "snarkos-utilities/default", ]

[dev-dependencies.criterion]
version = "0.3"

[[bench]]
name = "integer_arithmetic"
path = "benches/integer_arithmetic.rs"
harness = false
