[package]
name = "snarkos-network"
version = "1.3.9"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Network for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography::cryptocurrencies", "operating-systems" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2018"

[features]
prometheus = [ "snarkos-metrics/prometheus" ]

[dependencies.snarkvm-algorithms]
version = "0.5.4"

[dependencies.snarkvm-dpc]
version = "0.5.4"

[dependencies.snarkvm-utilities]
version = "0.6.0"

[dependencies.snarkos-consensus]
path = "../consensus"
version = "1.3.9"

[dependencies.snarkos-storage]
path = "../storage"
version = "1.3.9"

[dependencies.futures]
version = "0.3"

[dependencies.anyhow]
version = "1.0"

[dependencies.bincode]
version = "1.3.1"

[dependencies.byteorder]
version = "1"

[dependencies.capnp]
version = "0.14"

[dependencies.capnpc]
version = "0.14"

[dependencies.chrono]
version = "0.4"
features = [ "serde" ]

[dependencies.circular-queue]
version = "0.2"

[dependencies.derivative]
version = "2"

[dependencies.fxhash]
version = "0.2"

[dependencies.hex]
version = "0.4.2"

[dependencies.log]
version = "0.4.11"

[dependencies.snarkos-metrics]
path = "../metrics"
version = "1.3.9"

[dependencies.defer]
version = "0.1"

[dependencies.async-trait]
version = "0.1"

[dependencies.once_cell]
version = "1.5.2"

[dependencies.rand]
version = "0.8"

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[dependencies.snow]
version = "0.8"
default-features = false
features = [
  "libsodium-resolver",
  "chacha20poly1305",
  "blake2",
  "sha2",
  "x25519-dalek",
  "rand"
]

[dependencies.thiserror]
version = "1.0"

[dependencies.tokio]
version = "1"
features = [
  "io-util",
  "parking_lot",
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
  "time"
]

[dependencies.tracing]
default-features = false
features = [ "log" ]
version = "0.1"

[dependencies.tracing-futures]
version = "0.2"

[dependencies.tracing-subscriber]
version = "0.2"

[dependencies.arc-swap]
version = "1.2"

[dependencies.atomic-instant]
version = "0.1"

[dependencies.mpmc-map]
version = "0.1"

[dev-dependencies.snarkos-testing]
path = "../testing"

[dev-dependencies.nalgebra]
version = "0.27"

[dev-dependencies.peak_alloc]
version = "0.1.0"
