[package]
name = "snarkos-network"
version = "2.0.2"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Node server for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "operating-systems" ]
license = "GPL-3.0"
edition = "2021"

[dependencies.anyhow]
version = "1"

[dependencies.bincode]
version = "1.0"

[dependencies.bytes]
version = "1.0.0"

[dependencies.circular-queue]
version = "0.2"

[dependencies.futures]
version = "0.3.21"
features = [ "thread-pool" ]

[dependencies.once_cell]
version = "1"

[dependencies.rand]
version = "0.8"

[dependencies.rayon]
version = "1"

[dependencies.serde]
version = "1"

[dependencies.snarkos-environment]
path = "../environment"
version = "2.0.2"
features = [ "network" ]

[dependencies.snarkos-metrics]
path = "../metrics"
version = "2.0.2"
optional = true

[dependencies.snarkos-storage]
path = "../storage"
version = "2.0.2"

[dependencies.snarkvm]
version = "0.8.0"

[dependencies.time]
version = "0.3.7"

[dependencies.tokio]
version = "1"
features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time"
]

[dependencies.tokio-util]
version = "0.7"
features = [ "codec" ]

[dependencies.tokio-stream]
version = "=0.1"

[dependencies.tracing]
version = "0.1"

[features]
default = [ ]
prometheus = [ "snarkos-metrics/prometheus" ]
test = [ "snarkos-metrics/test" ]
