[package]
name = "snarkos-node"
version = "2.0.2"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A node for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "operating-systems" ]
license = "GPL-3.0"
edition = "2021"

[features]
default = [ ]
timer = [ "aleo-std/timer", "snarkos-node-ledger/timer" ]

[dependencies.aleo-std]
version = "0.1.15"
default-features = false

[dependencies.anyhow]
version = "1"

[dependencies.async-trait]
version = "0.1"

[dependencies.colored]
version = "2"

[dependencies.futures-util]
version = "0.3"
features = ["sink"]

[dependencies.indexmap]
version = "1"

[dependencies.num_cpus]
version = "1"

[dependencies.parking_lot]
version = "0.12"

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.serde_json]
version = "1"

[dependencies.snarkos-account]
path = "../account"

[dependencies.snarkos-node-cdn]
path = "./cdn"

[dependencies.snarkos-node-consensus]
path = "./consensus"

[dependencies.snarkos-node-ledger]
path = "./ledger"

[dependencies.snarkos-node-messages]
path = "./messages"

[dependencies.snarkos-node-rest]
path = "./rest"

[dependencies.snarkos-node-router]
path = "./router"

[dependencies.snarkos-node-store]
path = "./store"

[dependencies.snarkos-node-tcp]
path = "./tcp"

[dependencies.snarkvm]
workspace = true

[dependencies.time]
version = "0.3"

[dependencies.tokio]
version = "1.23"
features = ["rt", "signal"]

[dependencies.tokio-util]
version = "0.7"

[dependencies.tracing]
version = "0.1"

[dev-dependencies.deadline]
version = "0.2"

[dev-dependencies.pea2pea]
version = "0.43"

[dev-dependencies.tracing-subscriber]
version = "0.3"
features = [ "env-filter", "fmt" ]

[dev-dependencies.rand_chacha]
version = "0.3.0"
