[package]
name = "snarkos-node"
version = "2.2.7"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A node for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoNet/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [ "cryptography", "operating-systems" ]
license = "Apache-2.0"
edition = "2021"

[features]
default = [ "parallel" ]
parallel = [ "rayon" ]
timer = [ "aleo-std/timer" ]
metrics = [
  "dep:metrics",
  "snarkos-node-bft/metrics",
  "snarkos-node-consensus/metrics",
  "snarkos-node-router/metrics",
  "snarkos-node-tcp/metrics"
]
history = [ "snarkos-node-rest/history" ]

[dependencies.aleo-std]
workspace = true

[dependencies.anyhow]
version = "1.0.79"

[dependencies.async-trait]
version = "0.1"

[dependencies.colored]
version = "2"

[dependencies.futures-util]
version = "0.3"
features = [ "sink" ]

[dependencies.indexmap]
version = "2.1"

[dependencies.metrics]
package = "snarkos-node-metrics"
path = "./metrics"
version = "=2.2.7"
optional = true

[dependencies.num_cpus]
version = "1"

[dependencies.once_cell]
version = "1"

[dependencies.parking_lot]
version = "0.12"

[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.rayon]
version = "1"
optional = true

[dependencies.serde_json]
version = "1"
features = [ "preserve_order" ]

[dependencies.snarkos-account]
path = "../account"
version = "=2.2.7"

[dependencies.snarkos-node-bft]
path = "./bft"
version = "=2.2.7"

[dependencies.snarkos-node-cdn]
path = "./cdn"
version = "=2.2.7"

[dependencies.snarkos-node-consensus]
path = "./consensus"
version = "=2.2.7"

[dependencies.snarkos-node-rest]
path = "./rest"
version = "=2.2.7"

[dependencies.snarkos-node-router]
path = "./router"
version = "=2.2.7"

[dependencies.snarkos-node-sync]
path = "./sync"
version = "=2.2.7"

[dependencies.snarkos-node-tcp]
path = "./tcp"
version = "=2.2.7"

[dependencies.snarkvm]
workspace = true

[dependencies.time]
version = "0.3"

[dependencies.tokio]
version = "1.28"
features = [ "rt", "signal" ]

[dependencies.tokio-util]
version = "0.7"

[dependencies.tracing]
version = "0.1"

[dev-dependencies.deadline]
version = "0.2"

[dev-dependencies.paste]
version = "1"

[dev-dependencies.pea2pea]
version = "0.49"

[dev-dependencies.snarkos-node-router]
path = "./router"
features = [ "test" ]

[dev-dependencies.tracing-subscriber]
version = "0.3"
features = [ "env-filter", "fmt" ]

[dev-dependencies.rand_chacha]
version = "0.3.0"
