[package]
name = "snarkos-objects"
version = "0.8.0"
authors = ["The Aleo Team <hello@aleo.org"]
description = "Objects for a decentralized record system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["cryptography", "blockchain", "decentralized", "record", "zkSNARK"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
snarkos-algorithms = { path = "../algorithms", version = "0.8.0" }
snarkos-errors = { path = "../errors", version = "0.8.0" }
snarkos-models = { path = "../models", version = "0.8.0" }
snarkos-utilities = { path = "../utilities", version = "0.8.0" }
snarkos-curves = { path = "../curves", version = "0.8.0" }

base58 = { version = "0.1" }
bech32 = { version = "0.6" }
chrono = { version = "0.4", features = ["serde"] }
derivative = { version = "1" }
hex = { version = "0.4.2" }
rand = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.8" }
once_cell = "1.3.1"

[dev-dependencies]
bincode = "1.2.1"
