[package]
name = "snarkos-objects"
version = "0.8.0"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Objects for a decentralized record system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = ["cryptography", "blockchain", "decentralized", "record", "zkSNARK"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
snarkos-algorithms = { path = "../algorithms", version = "0.8.0", default-features = false }
snarkos-curves = { path = "../curves", version = "0.8.0", default-features = false }
snarkos-errors = { path = "../errors", version = "0.8.0", default-features = false }
snarkos-models = { path = "../models", version = "0.8.0", default-features = false }
snarkos-utilities = { path = "../utilities", version = "0.8.0", default-features = false }

base58 = { version = "0.1" }
bech32 = { version = "0.6" }
chrono = { version = "0.4", features = ["serde"] }
derivative = { version = "2" }
hex = { version = "0.4.2" }
once_cell = { version = "1.4.0" }
rand = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.9" }

[dev-dependencies]
snarkos-dpc = { path = "../dpc", version = "0.8.0", default-features = false }

bincode = { version = "1.3.1" }

[features]
default = [
    "snarkos-algorithms/default",
    "snarkos-curves/default",
    "snarkos-errors/default",
    "snarkos-models/default",
    "snarkos-utilities/default",
]
